paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.compile.log
error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.rs:4:1
  |
4 | extern crate lazy_static;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref ARR: RefCell<[i32; 256]> = RefCell::new([0; 256]);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref ARR: RefCell<[i32; 256]> = RefCell::new([0; 256]);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref ARR: RefCell<[i32; 256]> = RefCell::new([0; 256]);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref ARR: RefCell<[i32; 256]> = RefCell::new([0; 256]);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref ARR: RefCell<[i32; 256]> = RefCell::new([0; 256]);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `RefCell<[i32; 256]>` cannot be shared between threads safely
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref ARR: RefCell<[i32; 256]> = RefCell::new([0; 256]);
8 | | }
  | |_^ `RefCell<[i32; 256]>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `RefCell<[i32; 256]>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required by a bound in `Lazy`
 --> /rust/deps/lazy_static-1.5.0/src/inline_lazy.rs:19:1
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref ARR: RefCell<[i32; 256]> = RefCell::new([0; 256]);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `a`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_003/target.rs:10:6
   |
10 | fn f(a: u8, b: u8) -> i32 {
   |      ^ help: if this is intentional, prefix it with an underscore: `_a`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 8 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.